--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2>Timetable</h2>
         <div class="timetable-item">
             <p><strong>Travis Scott</strong></p>
-            <p>MainStage - 00:05 - 00:25</p>
+            <p>MainStage A - 00:05 - 00:25</p>
         </div>
         <div class="timetable-item">
             <p><strong>Billie Eilish</strong></p>
@@ -137,15 +137,15 @@
         </div>
         <div class="timetable-item">
             <p><strong>Keshi</strong></p>
-            <p>MainStage - 00:45 - 01:05</p>
+            <p>MainStage A - 00:45 - 01:05</p>
         </div>
         <div class="timetable-item">
-            <p><strong>Keshi</strong></p>
-            <p>MainStage - 00:45 - 01:05</p>
+            <p><strong>Drake</strong></p>
+            <p>MainStage B - 00:00 - 01:05</p>
         </div>
         <div class="timetable-item">
-            <p><strong>Keshi</strong></p>
-            <p>MainStage - 00:45 - 01:05</p>
+            <p><strong>Yoasobi</strong></p>
+            <p>MainStage B - 22:45 - 23:45</p>
         </div>
     </div>
 </div>
